Closed Bug 1059035 Opened 10 years ago Closed 10 years ago

Crash [@ mozilla::dom::SourceBuffer::Remove]

Categories

(Core :: Audio/Video, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: jruderman, Assigned: kinetik)

References

Details

(Keywords: crash, testcase)

Crash Data

Attachments

(3 files)

Attached file testcase
With:
  user_pref("media.mediasource.enabled", true);
Attached file stack
In mozilla::dom::SourceBuffer::Remove:

-> 281 	  if (IsNaN(mMediaSource->Duration()) ||

mMediaSource is null
Bug 1053682 moved some mMediaSource accesses above the IsAttached() test.
Blocks: 1053682
Attachment #8479538 - Flags: review?(cajbir.bugzilla) → review+
https://hg.mozilla.org/mozilla-central/rev/dfb1559c2742
Assignee: nobody → kinetik
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: