Bug 1059035 - Check IsAttached() before accessing mMediaSource in SourceBuffer::Remove.  r=cajbir